--- a/less/_footer.less
+++ b/less/_footer.less
@@ -15,7 +15,7 @@ footer {
 	&:before {
 		content: "";
 		background: @primary;
-		width: 102vw;
+		width: 99vw; /* @see https://stackoverflow.com/q/75726777/633864 */
 		height: 100%;
 		position: absolute;
 		left: 50%;
