fix: fixed non calculated grid percentages

--- a/less/_grid.less
+++ b/less/_grid.less
@@ -19,9 +19,9 @@ grid {
 // columns
 	
 @columns: 12;
-	
+
 .width(@x) {
-	width: 100% / @columns * @x;
+	width: (@x / @columns) * 100%;
 }
 
 // eg: <div col="6"></div>
