--- a/css/bare.css
+++ b/css/bare.css
@@ -278,51 +278,51 @@ grid grid:not(:first-child) {
   margin: 1rem -1rem 0;
 }
 [col="1/12"] {
-  width: 100% / 12 * 1;
+  width: 8.33333333%;
 }
 [col="2/12"],
 [col="1/6"] {
-  width: 100% / 12 * 2;
+  width: 16.66666667%;
 }
 [col="3/12"],
 [col="1/4"] {
-  width: 100% / 12 * 3;
+  width: 25%;
 }
 [col="4/12"],
 [col="2/6"],
 [col="1/3"] {
-  width: 100% / 12 * 4;
+  width: 33.33333333%;
 }
 [col="5/12"] {
-  width: 100% / 12 * 5;
+  width: 41.66666667%;
 }
 [col="6/12"],
 [col="3/6"],
 [col="2/4"],
 [col="1/2"] {
-  width: 100% / 12 * 6;
+  width: 50%;
 }
 [col="7/12"] {
-  width: 100% / 12 * 7;
+  width: 58.33333333%;
 }
 [col="8/12"],
 [col="4/6"],
 [col="2/3"] {
-  width: 100% / 12 * 8;
+  width: 66.66666667%;
 }
 [col="9/12"],
 [col="3/4"] {
-  width: 100% / 12 * 9;
+  width: 75%;
 }
 [col="10/12"],
 [col="5/6"] {
-  width: 100% / 12 * 10;
+  width: 83.33333333%;
 }
 [col="11/12"] {
-  width: 100% / 12 * 11;
+  width: 91.66666667%;
 }
 [col="1/1"] {
-  width: 100% / 12 * 12;
+  width: 100%;
 }
 [col] {
   display: inline-block;
